--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body {
   background-image: url(./images/pattern-background-desktop.svg);
   background-repeat: no-repeat;
   background-size: contain;
- background-color: var(--clr-Very-pale-blue);
+  background-color: var(--clr-Pale-blue);
 }
 
 .card-container {
