--- a/style.css
+++ b/style.css
@@ -142,6 +142,7 @@ button:hover {
   color: var(--clr-desaturated-blue);
   font-size: 1rem;
   margin: 21px;
+   margin-bottom: 35px;
   cursor: pointer;
 }
 .cancel:hover {
