--- a/style.css
+++ b/style.css
@@ -93,7 +93,7 @@ body {
   border-radius: 12px;
   margin-top: 12px;
   background: var(--clr-Very-pale-blue);
-  padding: 12px 10px;
+  padding: 29px 16px
 }
 .music-icon {
   width: 2.5rem;
