--- a/style.css
+++ b/style.css
@@ -91,7 +91,7 @@ body {
   width: 80%;
   border-radius: 12px;
   background: var(--clr-Very-pale-blue);
-  padding: 29px 16px
+  padding: 17px 16px;
 }
 .music-icon {
   width: 2.5rem;
