--- a/style.css
+++ b/style.css
@@ -1,30 +1,17 @@
-/* google fonts import (Outfit, sans-serif */
-@import url("https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@500;700;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap");
+/* font-family: 'Inter', sans-serif; */
+@import url("https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap");
+/* font-family: 'Lexend Deca', sans-serif; */
 
-/* Varibles */
 :root {
-  /* colors */
+  -clr-very-dark-blue: hsl(233, 47%, 7%);
+  -clr-dark-desaturated-blue: hsl(244, 38%, 16%);
+  -clr-soft-violet: hsl(277, 64%, 61%);
 
-  /* Primary */
-  --clr-Pale-blue: hsl(225, 100%, 94%);
-  --clr-Bright-blue: hsl(245, 75%, 52%);
-
-  /*  Neutral */
-  --clr-Very-pale-blue: hsl(225, 100%, 98%);
-  --clr-desaturated-blue: hsl(224, 23%, 55%);
-  --clr-Dark-blue: hsl(223, 47%, 23%);
-
-  /* Typography */
-
-  /* font family */
-  --ff-Red-Hat-Display: "Red-Hat-Display", sans-serif;
-
-  /* font weight */
-  --fw-medim: 500;
-  --fw-bold: 700;
-  --fw-black: 900;
+  -clr-white: hsl(0, 0%, 100%);
+  -clr-slightly-transparent-white: hsla(0, 0%, 100%, 0.75);
+  -clr-slightly-transparent-whit: hsla(0, 0%, 100%, 0.6);
 }
-
 * {
   margin: 0;
   padding: 0;
@@ -32,133 +19,103 @@
 }
 
 body {
-  font-family: var(--ff-Red-Hat-Display);
-  background-image: url(./images/pattern-background-desktop.svg);
-  background-repeat: no-repeat;
-  background-size: contain;
-  background-color: var(--clr-Pale-blue);
+  font-family: "Inter", sans-serif;
+  background-color: hsl(233, 47%, 7%);
 }
 
-.card-container {
-  width: 450px;
-  text-align: center;
-  border-radius: 15px;
+.main-container {
+  /*  background: burlywood; */
   margin: 0 auto;
-   padding-top: 50px;
+  width: 80%;
 }
 .card {
-  background: #fff;
-  width: 100%;
-   margin-top: 50px;
-  border-radius: 15px;
+  max-width: 976px;
+
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  margin: 0 auto;
+  margin-top: 150px;
 }
-.main-img {
+.img-section {
+  width: 50%;
+  position: relative;
+}
+.img-section:before {
+  content: "";
   width: 100%;
-  border-radius: 12px 12px 0 0;
+  height: 100%;
+  position: absolute;
+  /*  background: rgba(0, 0, 255, 0.5); */
+  background: hsla(277, 64%, 61%, 0.554);
+  border-radius: 0 12px 12px 0;
 }
-.centr-element {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  text-align: center;
-   align-items: center;
+.img-section img {
+  background-color: yellow;
+  width: 100%;
+  display: block;
+  float: right;
+  border-radius: 0 12px 12px 0;
 }
-.order-header {
-  color: var(--clr-Dark-blue);
-   font-size: 1.8rem;
-  margin: 25px 0;
-  margin-top: 50px;
-  font-weight: 1000;
+.left-section {
+  width: 50%;
+  padding: 27px;
+  background-color: hsl(244, 38%, 16%);
+  border-radius: 12px 0 0 12px;
+}
+.left-section h1 {
+  color: hsl(0, 0%, 100%);
+  font-size: 32px;
 }
 .paragraph {
-  color: var(--clr-desaturated-blue);
-  font-size: 18px;
-  font-weight: 300 !important;
- /* margin-top: 25px;*/
-  margin-bottom: 20px;
-  line-height: 1.6rem;
-  width: 80%;
-  justify-content: center;
-  text-align: center;
-  display: flex;
-}
-.mid-content {
-  display: flex;
-  align-items: center;
-  width: 80%;
-  border-radius: 12px;
-  background: var(--clr-Very-pale-blue);
-  padding: 17px 16px;
-}
-.music-icon {
-  width: 2.5rem;
-  height: 2.5rem;
-  margin-right: 12px;
-}
-.price-container {
-  /* margin: 0; */
-}
-.annul-plan {
-  font-size: 14px;
-  margin-top: 0.5rem;
-}
-.price {
-  color: var(--clr-desaturated-blue);
-  margin-top: 0.5rem;
-}
-.change {
-  display: flex;
-  margin: auto;
-    margin-left: 134px;
-  font-size: 15px;
-  color: var(--clr-Bright-blue);
-  text-decoration: underline;
-  cursor: pointer;
-}
-.change:hover {
-  color: var(--clr-desaturated-blue);
-}
-button {
-  width: 19rem;
-   padding: 16px;
-   margin-top: 40px;
-  background: var(--clr-Bright-blue);
-  border: none;
-  border-radius: 12px;
-  color: #fff;
-  font-weight: 600;
-  cursor: pointer;
-   box-shadow: 0 8px 16px -8px darkblue;
-}
-button:hover {
-  background: var(--clr-desaturated-blue);
-}
-.cancel {
-  color: var(--clr-desaturated-blue);
-  font-size: 1rem;
-  margin: 21px;
-   margin-bottom: 35px;
-  cursor: pointer;
-}
-.cancel:hover {
-  color: #000;
+  color: hsla(0, 0%, 100%, 0.6);
+  padding-top: 13px;
+  margin-top: 37px;
+  font-family: "Lexend Deca", sans-serif;
 }
 
-@media only screen and (max-width: 313px) {
-  .card-container {
-    width: 305px;
-    margin: 12px 4px;
-  }
-  .mid-content {
-    width: 17rem;
-  }
-  .change {
+.bottom-section {
+  display: flex;
+  margin-top: 50px;
+  justify-content: center;
+  gap: 60px;
+}
+.div1 p {
+  font-size: 10px;
+  color: rgba(255, 255, 255, 0.6);
+  text-transform: uppercase;
+  font-weight: bold;
+}
+.insights-color-change {
+  color: hsl(277, 64%, 61%);
+}
+.left-content {
+  padding: 12px;
+}
+
+@media screen and (max-width: 1135px) {
+  .main-container {
     margin: auto;
   }
-  button {
-    width: 16rem;
+  .card {
+    width: 1200px;
+    display: flex;
+    flex-direction: column-reverse;
+    margin: 12px auto;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+  }
+  .bottom-section {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+  }
+  .img-section:before {
+    display: flex;
+    align-items: center;
+  }
+  .left-section,
+  .img-section img,
+  .img-section:before {
+    border-radius: 0;
   }
 }
