--- a/style.css
+++ b/style.css
@@ -30,7 +30,9 @@ body {
 }
 .card {
  /* max-width: 976px;*/
-  max-width: 1900px;
+ /*max-width: 1900px;*/
+   width: 69.375rem;
+  height: 27.875rem;
 
   display: flex;
   margin: 0 auto;
